--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Andrew Laiff <q.laiff@gmail.com>",
   "private": true,
   "dependencies": {
-    "@rispa/cli": "^2.0.0",
+    "@rispa/cli": "latest",
     "lerna": "^2.0.0-rc.4"
   },
   "scripts": {
