--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "dependencies": {
     "@rispa/cli": "latest",
-    "lerna": "^2.0.0-rc.4"
+    "lerna": "^2.0.0"
   },
   "scripts": {
     "bs": "lerna bootstrap",
