--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Andrew Laiff <q.laiff@gmail.com>",
   "private": true,
   "dependencies": {
-    "lerna": "^2.0.0"
+    "lerna": "2.5.1"
   },
   "scripts": {
     "bs": "lerna bootstrap",
